Contact Shadows causes wrong shading in Reflection Plane #89777

Closed
opened 2021-07-10 20:18:46 +02:00 by Alex · 21 comments

System Information
Intel i9-10850K, 32 Gb RAM, NVidia GeForce GTX 1070 8GB
Windows 10 x64

Blender Version
Broken: 2.92
Worked: 2.91

Caused by either ba75ea8012 or 6842c549bb

Short description of error
New Reflection Plane algorithm produces inverted colors, overly darkened areas, blocky artifacts and some other lighting anomalies with Contact Shadows enabled which didn't happen before.

Exact steps for others to reproduce the error

Open provided file, enable Rendered mode and observe the result in the mirror, disable Contact Shadows on the light and darkened areas on the floor, blocky glitches on the opposite wall and strange lighting on Suzanne will disappear. If you open the same file in 2.91 that bug won't happen.
ContactShadowsReflectionPlaneBug.JPG
ContactShadowsReflectionPlaneBug.blend

**System Information** Intel i9-10850K, 32 Gb RAM, NVidia GeForce GTX 1070 8GB Windows 10 x64 **Blender Version** Broken: 2.92 Worked: 2.91 Caused by either ba75ea8012 or 6842c549bb **Short description of error** New Reflection Plane algorithm produces inverted colors, overly darkened areas, blocky artifacts and some other lighting anomalies with Contact Shadows enabled which didn't happen before. **Exact steps for others to reproduce the error** Open provided file, enable Rendered mode and observe the result in the mirror, disable Contact Shadows on the light and darkened areas on the floor, blocky glitches on the opposite wall and strange lighting on Suzanne will disappear. If you open the same file in 2.91 that bug won't happen. ![ContactShadowsReflectionPlaneBug.JPG](https://archive.blender.org/developer/F10219941/ContactShadowsReflectionPlaneBug.JPG) [ContactShadowsReflectionPlaneBug.blend](https://archive.blender.org/developer/F10219943/ContactShadowsReflectionPlaneBug.blend)
Author

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst
Author

Just in case, in 2.93.4 RC objects in Reflection Plane have weird outlines when Screen Space Reflections is also enabled and Contact Shadows produce strange dark circle which reacts to Distance and Thickness parameters of the Contact Shadow itself.
ReflectionOutline.JPG
ContactShadow1.JPG
ContactShadow2.JPG
ContactShadow3.JPG

Just in case, in 2.93.4 RC objects in Reflection Plane have weird outlines when Screen Space Reflections is also enabled and Contact Shadows produce strange dark circle which reacts to Distance and Thickness parameters of the Contact Shadow itself. ![ReflectionOutline.JPG](https://archive.blender.org/developer/F10320711/ReflectionOutline.JPG) ![ContactShadow1.JPG](https://archive.blender.org/developer/F10320713/ContactShadow1.JPG) ![ContactShadow2.JPG](https://archive.blender.org/developer/F10320715/ContactShadow2.JPG) ![ContactShadow3.JPG](https://archive.blender.org/developer/F10320717/ContactShadow3.JPG)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will bisect.

Can confirm, will bisect.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Will dare setting this to High prio.

@fclem: this is not an expected side-effect of those commits, right?

Will dare setting this to High prio. @fclem: this is not an expected side-effect of those commits, right?
Clément Foucault self-assigned this 2021-10-13 16:33:19 +02:00

This issue was referenced by f9f6d8de58

This issue was referenced by f9f6d8de58a350a4ba7110e6fc7bf7ea14c6daa0

This issue was referenced by d39cd851c0

This issue was referenced by d39cd851c0ca67dff975b1c447089d319ef0816f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

I have tested Blender 3.0 alpha (2.93 hasn't been updated at the moment) and Contact Shadows do not produce the weird black circle anymore but fuzzy outline around all objects is still there, it seems to appear when Screen Space Reflections and Reflection Plane are used together and it reacts to Half Res Trace settings and becomes a little bit thinner when you disable it. I have double-checked in 2.91 and that outline does appear in it as well but it is a lot thinner so should this be reported as a separate ticket?
Fuzzy_outlines.jpg

I have tested Blender 3.0 alpha (2.93 hasn't been updated at the moment) and Contact Shadows do not produce the weird black circle anymore but fuzzy outline around all objects is still there, it seems to appear when Screen Space Reflections and Reflection Plane are used together and it reacts to Half Res Trace settings and becomes a little bit thinner when you disable it. I have double-checked in 2.91 and that outline does appear in it as well but it is a lot thinner so should this be reported as a separate ticket? ![Fuzzy_outlines.jpg](https://archive.blender.org/developer/F11088676/Fuzzy_outlines.jpg)
Member

In #89777#1235436, @SpectreFirst wrote:
I have tested Blender 3.0 alpha (2.93 hasn't been updated at the moment) and Contact Shadows do not produce the weird black circle anymore but fuzzy outline around all objects is still there, it seems to appear when Screen Space Reflections and Reflection Plane are used together and it reacts to Half Res Trace settings and becomes a little bit thinner when you disable it. I have double-checked in 2.91 and that outline does appear in it as well but it is a lot thinner so should this be reported as a separate ticket?
Fuzzy_outlines.jpg

Thx checking.
Yes, please report this separately [afraid this will slip through otherwise]

> In #89777#1235436, @SpectreFirst wrote: > I have tested Blender 3.0 alpha (2.93 hasn't been updated at the moment) and Contact Shadows do not produce the weird black circle anymore but fuzzy outline around all objects is still there, it seems to appear when Screen Space Reflections and Reflection Plane are used together and it reacts to Half Res Trace settings and becomes a little bit thinner when you disable it. I have double-checked in 2.91 and that outline does appear in it as well but it is a lot thinner so should this be reported as a separate ticket? > ![Fuzzy_outlines.jpg](https://archive.blender.org/developer/F11088676/Fuzzy_outlines.jpg) Thx checking. Yes, please report this separately [afraid this will slip through otherwise]

In #89777#1235436, @SpectreFirst wrote:
I have tested Blender 3.0 alpha (2.93 hasn't been updated at the moment) and Contact Shadows do not produce the weird black circle anymore but fuzzy outline around all objects is still there, it seems to appear when Screen Space Reflections and Reflection Plane are used together and it reacts to Half Res Trace settings and becomes a little bit thinner when you disable it. I have double-checked in 2.91 and that outline does appear in it as well but it is a lot thinner so should this be reported as a separate ticket?
Fuzzy_outlines.jpg

This is known side effect of the changes in screen space reflection we made in 2.93. This is a known limitation.

> In #89777#1235436, @SpectreFirst wrote: > I have tested Blender 3.0 alpha (2.93 hasn't been updated at the moment) and Contact Shadows do not produce the weird black circle anymore but fuzzy outline around all objects is still there, it seems to appear when Screen Space Reflections and Reflection Plane are used together and it reacts to Half Res Trace settings and becomes a little bit thinner when you disable it. I have double-checked in 2.91 and that outline does appear in it as well but it is a lot thinner so should this be reported as a separate ticket? > ![Fuzzy_outlines.jpg](https://archive.blender.org/developer/F11088676/Fuzzy_outlines.jpg) This is known side effect of the changes in screen space reflection we made in 2.93. This is a known limitation.
Author

It looks like this problem was not resolved for 2.93, I've tested on both 2.93.5 and daily 2.93.6 and both still have this!
ReflectionProblem293.JPG

It looks like this problem was not resolved for 2.93, I've tested on both 2.93.5 and daily 2.93.6 and both still have this! ![ReflectionProblem293.JPG](https://archive.blender.org/developer/F11593474/ReflectionProblem293.JPG)
Member

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'
Member

@fclem: should d39cd851c0 be part of {#88449}?

@fclem: should d39cd851c0 be part of {#88449}?
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

@lichtwerk, yes can be added

@lichtwerk, yes can be added
Member

Changed status from 'Needs Developer To Reproduce' to: 'Archived'

Changed status from 'Needs Developer To Reproduce' to: 'Archived'
Member

Ok, added to be included in the next LTS release.
Will close the report then.

Ok, added to be included in the next LTS release. Will close the report then.
Member

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89777
No description provided.